// Image converter

// Initial version of this was written using Gradle 8.8 and Java 21

plugins {
	id 'java'
	id 'application'
	id 'eclipse'
}

eclipse {
	classpath {
		// try to fix the classpath issues... it seems that buildship kind of sucks...
		defaultOutputDir = new File('./build/classes')
		file {
			whenMerged { 
				// use default Output for all source-folders. see also defaultOutputDir per project
				entries.each { source ->
					if (source.kind == 'src' && !source.path.startsWith('/')) { // only Source-folders in the project starting with '/' are project-references
						source.output = defaultOutputDir
					}
				}
			}
		}
	}
}

java {
	// Eclipse seems to get confused with the toolchain
//	toolchain {
//		languageVersion = JavaLanguageVersion.of(21)
//	}
	
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

application {
	mainClass.set("com.cloud450GH.image.converter.Main")
}

run {
	workingDir = projectDir
}

// https://docs.gradle.org/current/userguide/declaring_repositories.html
repositories {
	mavenCentral()
	//google()
	
	// Website: https://mvnrepository.com/
	// Repo path: https://repo1.maven.org/maven2
	maven {
		url "https://repo1.maven.org/maven2"
	}
} // end repositories

dependencies {

	// MIT license
	implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.16'
	
	// APL 2.0
	implementation group: 'com.sksamuel.scrimage', name: 'scrimage-core', version: '4.2.0'
	implementation group: 'com.sksamuel.scrimage', name: 'scrimage-webp', version: '4.2.0'
	
	// APL 2.0
	implementation group: 'commons-io', name: 'commons-io', version: '2.16.1'
	
	// greenrobot's eventbus - APL 2.0
	implementation("org.greenrobot:eventbus-java:3.3.1")
	
	// Google Guava - License APL 2.0
	//implementation group: 'com.google.guava', name: 'guava', version: '33.2.1-jre'
}